[[release-notes-5.11.3]]
== 5.11.3

*Date of Release:* ❓

*Scope:* Bug fixes and enhancements since 5.11.2

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/84?closed=1+[5.11.3] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.11.3-junit-platform]]
=== JUnit Platform

[[release-notes-5.11.3-junit-platform-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.11.3-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.3-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.11.3-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.11.3-junit-jupiter-bug-fixes]]
==== Bug Fixes

* Extensions can once again be registered via multiple `@ExtendWith` meta-annotations on
  the same composed annotation on a field within a test class.
* All `@...Source` annotations of parameterized tests can now also be repeated when used
  as meta annotations.


[[release-notes-5.11.3-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.3-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.11.3-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.11.3-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.11.3-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.3-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓